--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/node": "^12.12.30",
-    "@types/react": "^16.9.25",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-table": "^7.0.12",
-    "@types/superagent": "^4.1.7",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "react-table": "^7.0.0",
-    "superagent": "^5.2.2",
-    "typescript": "^3.7.5"
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-table": "^7.7.9",
+    "@types/superagent": "^4.1.14",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^5.0.0",
+    "react-table": "^7.7.0",
+    "sass": "^1.48.0",
+    "superagent": "^7.0.2",
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
