--- a/package.json
+++ b/package.json
@@ -3,23 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/node": "^17.0.8",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-table": "^7.7.9",
-    "@types/superagent": "^4.1.14",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0",
-    "react-table": "^7.7.0",
-    "sass": "^1.48.0",
-    "superagent": "^7.0.2",
-    "typescript": "^4.5.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-table": "^7.8.0",
+    "superagent": "^8.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +31,14 @@
   },
   "devDependencies": {
     "@now/node": "^1.4.1",
-    "mini-css-extract-plugin": "2.4.5"
+    "@types/node": "^17.0.8",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-table": "^7.7.12",
+    "@types/superagent": "^4.1.15",
+    "@vitejs/plugin-react": "^2.0.0",
+    "sass": "^1.54.0",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.4"
   }
 }
