--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check": "npm-run-all -p check:*",
     "check:lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "check:types": "tsc --noEmit",
+    "check:knip": "knip",
     "server": "nodemon -w bin bin/server.js",
     "build": "tsc && vite build"
   },
@@ -48,12 +49,15 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/sanitize-html": "^2.9.0",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.46.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "knip": "^2.19.3",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "sass": "^1.64.1",
